--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.552.0",
-    "next": "16.0.1",
+    "next": "^16.1.0",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0"
@@ -25,7 +25,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1",
+    "eslint-config-next": "^16.1.0",
     "sharp": "^0.34.5",
     "sharp-cli": "^5.2.0",
     "tailwindcss": "^4",
